--- a/Du_An_Android/app/src/main/res/layout/activity_result.xml
+++ b/Du_An_Android/app/src/main/res/layout/activity_result.xml
@@ -49,7 +49,7 @@
         android:id="@+id/btnViewScore"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Xem Bảng Xếp Hạng"
+        android:text="Xem Lịch Sử Lần Chơi"
         android:backgroundTint="#FF9800"/>
 
 </LinearLayout>
