--- a/Du_An_Android/app/src/main/res/layout/activity_result.xml
+++ b/Du_An_Android/app/src/main/res/layout/activity_result.xml
@@ -33,7 +33,7 @@
             android:textSize="20sp"
             android:lineSpacingExtra="8dp"
             android:layout_marginTop="30dp"
-            android:background="#FFFFFF"
+            android:background="@drawable/bg_result_card"
             android:padding="20dp"
             android:elevation="4dp"/>
 
