--- a/Du_An_Android/app/src/main/res/layout/activity_scoreboard.xml
+++ b/Du_An_Android/app/src/main/res/layout/activity_scoreboard.xml
@@ -25,6 +25,16 @@
         android:layout_above="@id/bottomBar"
         android:paddingTop="10dp"
         android:clipToPadding="false"/>
+    <TextView
+        android:id="@+id/tvNoData"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Bạn chưa chơi ván nào!"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:visibility="gone"
+        android:textColor="@color/btn_beige"
+        android:layout_centerInParent="true"/>
 
     <LinearLayout
         android:id="@+id/bottomBar"
